// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MagicLogin /> should render correctly - index 1`] = `
<div>
  <div
    class="sc-evZas duxpwP page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM cFomsy"
    >
      Logging in
    </h1>
  </div>
</div>
`;

exports[`<MagicLogin /> should render correctly with initial state 1`] = `
<div>
  <div
    class="sc-evZas duxpwP page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM cFomsy"
    >
      Logging in
    </h1>
  </div>
</div>
`;

exports[`<MagicLogin /> should render correctly with logInError 1`] = `
<div>
  <div
    class="sc-evZas duxpwP page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM cFomsy"
    >
      Logging in
    </h1>
    <span
      class="sc-iqcoie fIUTrZ"
    >
      <span
        class="sc-crXcEl iMitmy"
      >
        Something went wrong logging you in
        <br />
        Invalid session
        <br />
        <a
          class="sc-iBkjds kXOvCG"
          href="/login"
        >
          Try logging in again
        </a>
      </span>
    </span>
  </div>
</div>
`;

exports[`<MagicLogin /> should render correctly with loggingIn=true 1`] = `
<div>
  <div
    class="sc-evZas duxpwP page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM cFomsy"
    >
      Logging in
    </h1>
  </div>
</div>
`;

exports[`<MagicLogin /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-evZas duxpwP page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM cFomsy"
    >
      Logged in
    </h1>
    <span
      class="sc-iqcoie fIUTrZ"
    >
      Logged in!
      <br />
      You will now be redirected to the 
      account
       page
      <br />
      <a
        class="sc-iBkjds kXOvCG"
        href="/account"
      >
        Not been redirected? Click here
      </a>
    </span>
  </div>
</div>
`;
